ohg voorbeeld verloren
helaas

--- a/case-decomposition.tex
+++ b/case-decomposition.tex
@@ -6,13 +6,13 @@ At the beginning of the previous chapter I showed that the case scale \ac{nom} <
 
 What I showed as well in the previous chapter is the case scale \ac{nom} < \ac{acc} < \ac{dat} is a wide-spread phenomenon: it recurs. The scale can be observed in at least two more syntactic phenomena: agreement en relativization.\footnote{
 In this dissertation I do not work out accounts for these two syntactic phenomena. They merely serve as an illustration that the pattern is reflected in other syntactic phenomena as well.}
-The case scale also appears within morphology in syncretism patterns and formal containment. \pgcitet{pittner1995}{201:fn.4} makes this link to morphology as well: ``Furthermore, the Case hierarchies receive some independent support by morphology as shown by the various inflectional paradigms.''
+The case scale also appears within morphology in syncretism patterns and morphological case containment. \pgcitet{pittner1995}{201:fn.4} makes this link to morphology as well: ``Furthermore, the Case hierarchies receive some independent support by morphology as shown by the various inflectional paradigms.''
 
 I am not after a theory in which the case hierarchy is something construction specific, and syntax and morphology both have their own case hierarchy. I argue that there is a single trigger that is responsible for the case scale in different subparts of language \citep[cf.][on numeral constructions]{caha2019}. Specifically, I show that the observed case scale naturally follows on the assumption that the case hierarchy is deeply anchored in syntax. The case scale in morphology and syntax are merely reflexes of how case is organized in language.\footnote{
 \citet{himmelreich2017} works this intuition out in a different way.
 }
 
-This chapter is structured as follows. First, I introduce a specific case decomposition \citep{caha2009}. In the two following sections, I show how this case decomposition is able to derive the syncretism and formal containment facts from the previous chapter. I make this concrete in the framework Nanosyntax \citep{starke2009}. Finally, I show how the case decomposition translates to the case scale observed in headless relatives.
+This chapter is structured as follows. First, I introduce a specific case decomposition \citep{caha2009}. In the two following sections, I show how this case decomposition is able to derive the syncretism and morphological case containment facts from the previous chapter. I make this concrete in the framework Nanosyntax \citep{starke2009}. Finally, I show how the case decomposition translates to the case scale observed in headless relatives.
 
 
 \section{The basic idea}
@@ -25,10 +25,10 @@ This is illustrated in Table \ref{tbl:case-decomposed}. Accusative has all the f
 	\caption {Case decomposed}
 		\begin{tabular}{ll}
     \toprule
-    case      & features                      \\
+    case      & features                  \\
     \midrule
-    \ac{nom} & \ac{f}1                      \\
-    \ac{acc} & \ac{f}1, \ac{f}2            \\
+    \ac{nom} & \ac{f}1                    \\
+    \ac{acc} & \ac{f}1, \ac{f}2           \\
     \ac{dat} & \ac{f}1, \ac{f}2, \ac{f}3  \\
     \bottomrule
     \end{tabular}
@@ -42,7 +42,7 @@ Lastly, accusative corresponds to a set of features (\ac{f}1 and \ac{f}2) that i
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale-derive}
 
-The decomposition in Table \ref{tbl:case-decomposed} forms the basis to derive the case scale effects observed in the previous chapter. The next sections show how case containment and syncretism effects follow naturally. After that, I show how the decomposition also derives the case competition facts in headless relatives.
+The decomposition in Table \ref{tbl:case-decomposed} forms the basis to derive the case scale effects observed in the previous chapter. The next sections show how morphological case containment and syncretism effects follow naturally. After that, I show how the decomposition also derives the case competition facts in headless relatives.
 
 
 \section{Deriving syncretism}\label{sec:syncretism}
@@ -51,7 +51,7 @@ Case syncretism follows the ordering of the case scale \ac{nom} < \ac{acc} < \ac
 
 \begin{table}[ht]
   \center
-  \caption {Syncretism pattern}
+  \caption {Syncretism patterns (repeated)}
     \input{tables/syncretism-nom-acc-dat.tex}
   \label{tbl:syncretisms-derive}
 \end{table}
@@ -636,13 +636,13 @@ This result could never be derived with the lexical entries given in \ref{ex:ger
 
 In sum, the cumulative case decomposition from Table \ref{tbl:case-decomposed} can derive the observed syncretism patterns.
 
-\section{Deriving case containment}
+\section{Deriving morphological case containment}
 
 Khanty is an example of a language with so-called morphological case containment. The phonological form of the accusative literally contains the phonological form of the nominative, and the form of the dative contains the form of the accusative. In this section I show how morphological case containment can be derived from the case decomposition in Table \ref{tbl:case-decomposed}. I repeat an example from Khanty that shows morphological case containment in Table \ref{tbl:cont-khanty-3sg} \pgcitep{nikolaeva1999}{16}.
 
 \begin{table}[ht]
   \center
-  \caption {Containment in 3\ac{sg} in Khanty}
+  \caption {Morphological case containment of 3\ac{sg} in Khanty}
     \input{tables/containment-nom-acc-dat.tex}
   \label{tbl:cont-khanty-3sg}
 \end{table}
@@ -876,7 +876,7 @@ The result of the movement is given in \ref{ex:khanty-luw-el-na-spellout}. The l
 
 In sum, the cumulative case decomposition from Table \ref{tbl:case-decomposed} can derive the morphological case containment facts.
 
-\section{Deriving the case scale in headless relatives}
+\section{The intuition for headless relatives}
 
 In headless relatives, the internal case and the external case compete to surface on the relative pronoun. The two competing cases adhere to the case scale \ac{nom} < \ac{acc} < \ac{dat}, in which cases more to the right always win over cases more to the left. In this section I show how case competition in headless relatives can be derived from the case decomposition in Table \ref{tbl:case-decomposed}.
 
@@ -884,7 +884,7 @@ I repeat the summary of the data pattern for Gothic in Table \ref{tbl:summary-go
 
 \begin{table}[ht]
   \center
-  \caption {Summary of Gothic matching headless relative data}
+  \caption {Summary of Gothic headless relative (repeated)}
   \begin{tabular}{c|c|c|c}
     \toprule
         \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
