--- a/decomposing-relative-pronouns.tex
+++ b/decomposing-relative-pronouns.tex
@@ -38,7 +38,7 @@ This will be intuition later
 
 \begin{table}[H]
  \center
- \caption {Relative pronouns in headless relatives in \ac{mg}}
+ \caption {Relative pronouns in headless relatives in Modern German}
   \begin{tabular}{ccc}
   \toprule
        & \ac{inan} & \ac{an} \\
@@ -52,7 +52,7 @@ This will be intuition later
 
 \begin{table}[H]\label{tbl:paradigmohg}
  \center
- \caption {Relative pronouns in headless relatives in \ac{ohg}}
+ \caption {Relative pronouns in headless relatives in Old High German}
   \begin{tabular}{cccc}
   \toprule
        & \ac{n}.\ac{sg} & \ac{m}.\ac{sg}  & \ac{f}.\ac{sg} \\
