--- a/excluding-the-third-pattern.tex
+++ b/excluding-the-third-pattern.tex
@@ -209,7 +209,7 @@ Jan like.3\tsc{sg}\scsub{[acc]} \tsc{rel}.\tsc{dat}.\tsc{sg}.\tsc{an} ever tease
 `Jan likes whoever he teases.'\flushfill{Polish}\label{ex:polish-acc-dat}
 \bg. Ich {lade ein} \tbf{wem} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
  I.\ac{nom} invite.1\tsc{sg}\scsub{[acc]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria.\ac{nom} trust.3\tsc{sg}\scsub{[dat]}.\\
- `I invite whoever Maria also trusts.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat-disallow}
+ `I invite whoever Maria also trusts.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat-disallow}
 
 Why is the German sentence grammatical and the Polish one not? I do not want to say that one language allows for case competition and the other one does not. Instead, the difference follows from something within the language.
 
