--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -1,5 +1,17 @@
 %%%abbreviations%%%
 
+\DeclareAcronym{int}{
+  short = \tsc{int} ,
+  long  = internal case ,
+  tag = abbr
+}
+
+\DeclareAcronym{ext}{
+  short = \tsc{ext} ,
+  long  = external case ,
+  tag = abbr
+}
+
 \DeclareAcronym{nom}{
   short = \tsc{nom} ,
   long  = nominative ,
@@ -92,7 +104,7 @@
 
 \DeclareAcronym{sbjv}{
   short = \tsc{sbjv} ,
-  long  = subjunctive ,
+  long  = subjunctive mood,
   tag = abbr
 }
 
@@ -108,18 +120,6 @@
   tag = abbr
 }
 
-\DeclareAcronym{int}{
- short = \tsc{int} ,
- long  = internal case ,
- tag = abbr
-}
-
-\DeclareAcronym{ext}{
-  short = \tsc{ext} ,
-  long  = external case ,
-  tag = abbr
-}
-
 \DeclareAcronym{asp}{
   short = \tsc{asp} ,
   long  = aspectual marker ,
@@ -128,13 +128,19 @@
 
 \DeclareAcronym{pst}{
   short = \tsc{pst} ,
-  long  = past ,
+  long  = past tense,
   tag = abbr
 }
 
 \DeclareAcronym{pass}{
   short = \tsc{pass} ,
   long  = passive ,
+  tag = abbr
+}
+
+\DeclareAcronym{inf}{
+  short = \tsc{inf} ,
+  long  = infinitive ,
   tag = abbr
 }
 
@@ -221,24 +227,6 @@
   long  = preterite ,
   tag = abbr
 }
-
-\DeclareAcronym{ohg}{
-  short = Old High German,
-  long  = Old High German,
-  tag = abbr
-}
-
-\DeclareAcronym{mg}{
-  short = Modern German,
-  long  = Modern German,
-  tag = abbr
-}
-
-
-
-
-
-
 
 %%%texts%%%
 
