--- a/fenna-files/packages.sty
+++ b/fenna-files/packages.sty
@@ -95,6 +95,7 @@ boom/.style={for tree={s sep=10mm, inner sep=0, l=0}}
 
 %%%%%LIST OF TABLES%%%
 \renewcommand{\listtablename}{List of tables}%%%no capitals in headers%%%
+\renewcommand{\listfigurename}{List of figures}%%%no capitals in headers%%%
 
 %%%automatically put chapter headings in lot%%%
 % \usepackage{etoolbox}
