--- a/introduction.tex
+++ b/introduction.tex
@@ -88,7 +88,7 @@ The external case is accusative. The predicate \tit{ussiggwan} `to read' takes a
 The relative pronoun \tit{þo} `\ac{rel}.\ac{sg}.\ac{n}.\ac{acc}' appears in the accusative case. This accusative can only come from the predicate \tit{ussiggwan} `to read', which is the external case here. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 
 \exg. jah þo \tbf{-ei} \tbf{ist} \tbf{us} \tbf{Laudeikaion} jus ussiggwaid\\
- and \ac{rel}.\ac{sg}.\ac{n}.\ac{acc} -\ac{comp} be.\ac{pres}.3\ac{sg}\scsub{[nom]} from Laodicea you.\ac{pl} read.?.\scsub{[acc]}\\
+ and \ac{rel}.\ac{sg}.\ac{n}.\ac{acc} -\ac{comp} be.\ac{pres}.3\ac{sg}\scsub{[nom]} from Laodicea 2\ac{pl}.\ac{nom} read.\scsub{[acc]}\\
  `and you read the one which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, adapted from \pgcitealt{harbert1978}{357}}\label{ex:gothic-nom-acc}
 
 The conclusion that follows is that the relative pronoun can take the external case. At this point it remains unclear what happened to the internal nominative case.
