--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -42,7 +42,7 @@ The relative pronoun \tit{þo} `\ac{rel}.\ac{sg}.\ac{n}.\ac{acc}' appears in the
 Examples in which the internal case is nominative, the external case is accusative and the relative pronoun appears in nominative case are unattested.
 
 \exg. jah þo \tbf{-ei} \tbf{ist} \tbf{us} \tbf{Laudeikaion} jus ussiggwaid\\
- and \ac{rel}.\ac{sg}.\ac{n}.\ac{acc} -\ac{comp} be.\ac{pres}.3\ac{sg}\scsub{[nom]} from Laodicea you.\ac{pl} read.?.\scsub{[acc]}\\
+ and \ac{rel}.\ac{sg}.\ac{n}.\ac{acc} -\ac{comp} be.\ac{pres}.3\ac{sg}\scsub{[nom]} from Laodicea 2.\ac{pl}.\ac{nom} read.\scsub{[acc]}\\
  `and you read the one which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, adapted from \pgcitealt{harbert1978}{357}}\label{ex:gothic-nom-acc-rep}
 
 I continue with the competition between dative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in dative case and never in nominative.
@@ -54,7 +54,7 @@ The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{dat}' appears i
 Examples in which the internal case is dative, the external case is nominative and the relative pronoun appears in nominative case are unattested.
 
 \exg. iþ \tbf{þamm} \tbf{-ei} \tbf{leitil} \tbf{fraletada} leitil frijod\\
- but \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} little {forgive}.\ac{pass}.\ac{pres}.3\ac{sg}\scsub{[dat]} little love.?.\scsub{[nom]}\\
+ but \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} little {forgive}.\ac{pass}.\ac{pres}.3\ac{sg}\scsub{[dat]} little love.\scsub{[nom]}\\
  `but the one whom little is forgiven loves little' \flushfill{Gothic, \ac{luke} 7:47, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-dat-nom}
 
 Consider the example in \ref{ex:gothic-nom-dat}, in which the internal nominative case competes against the external dative case.
@@ -93,17 +93,17 @@ The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{dat}' appears i
 Examples in which the internal case is accusative, the external case is dative and the relative pronoun appears in accusative case are unattested.
 
 \exg. ei galaubjaiþ þamm \tbf{-ei} \tbf{insandida} \tbf{jains}\\
-that believe.\ac{opt}.\ac{pres}.2\ac{pl}\scsub{[dat]} \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} {send}.\ac{pret}.3\ac{sg}\scsub{[acc]} \ac{dem}.\ac{nom}.3\ac{sg}.\ac{m}\\
+that believe.\ac{opt}.\ac{pres}.2\ac{pl}\scsub{[dat]} \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} {send}.\ac{pret}.3\ac{sg}\scsub{[acc]} \ac{dem}.\ac{sg}.\ac{m}.\ac{nom}\\
 `that you believe in him whom he sent' \flushfill{Gothic, \ac{john} 6:29}\label{ex:gothic-dat-acc}
 
-A summary of the Gothic data as a whole is given in Table \ref{tbl:summary-gothic}. The left column shows the internal case between square brackets. The upper row shows the external case between square brackets. The other cells indicate the case of the relative pronoun. The diagonal is left blank, because these are instances in which the internal and external case match, and there is no case competition taking place.
+A summary of the Gothic data as a whole is given in Table \ref{tbl:summary-gothic}. The left column shows the internal case (\ac{int}) between square brackets. The upper row shows the external case (\ac{ext}) between square brackets. The other cells indicate the case of the relative pronoun. The diagonal is left blank, because these are instances in which the internal and external case match, and there is no case competition taking place.
 The remaining six cells show instances where the internal and external case differ. Within the cells, two cases are given. The case in the lower left corner stands for the relative pronoun in the internal case. The case in the upper right corner stands for the relative pronoun in the external case. The grammatical examples are marked in gray. The unattested examples are marked with an asterix and are unmarked.\footnote{
 Throughout this dissertation * stands for 'not found in natural language'. For extinct languages this means that there are no attested examples. For modern languages it means that the examples are ungrammatical.
 }
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
-  \caption{Summary Gothic headless relatives}
+  \caption{Extensive summary of Gothic headless relatives}
     \input{tables/gothic-grammaticality.tex}
     \label{tbl:summary-gothic}
 \end{table}
@@ -112,9 +112,9 @@ Table \ref{tbl:summary-gothic} can be simplified a step further as Figure \ref{t
 In the three instances in the lower left corner, the relative pronoun appears in the internal case. They correspond to the examples \ref{ex:gothic-acc-nom}, \ref{ex:gothic-dat-nom} and \ref{ex:gothic-dat-acc}.
 In the three instances in the upper right corner, the relative pronoun appears in the external case. They correspond to the examples in \ref{ex:gothic-nom-acc}, \ref{ex:gothic-nom-dat} and \ref{ex:gothic-acc-dat}.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
-  \caption{Simplified summary Gothic headless relatives}
+  \caption{Summary of Gothic headless relatives}
     \input{tables/gothic-summary.tex}
     \label{tbl:summary-gothic-simple}
 \end{table}
@@ -215,7 +215,7 @@ Putting the languages in \posscitet{moravcsik1978} schema gives the result as sh
 
  \begin{table}[ht]
    \center
-   \caption {Typological picture for agreement hierarchy \citep{gilligan1987}}
+   \caption {Typology for agreement hierarchy}
      \begin{tabular}[t]{ccccc}
        \toprule
            \multicolumn{3}{c}{agreement with} &              &         \\
@@ -249,7 +249,7 @@ Icelandic is a language that has dative subjects. It is like German in that it o
 Instead, it is the nominative object that agrees with the verb. This is illustrated in \ref{ex:icelandic-nom-obj}. The dative subject \tit{konunginum} `the king' is singular. The nominative object \tit{ambáttir} `slaves' is plural. The predicate \tit{voru} `were' is inflected for plural, agreeing with the nominative object. This is expected if morphological case determines agreement: it is the nominative that shows agreement. The grammatical role, the fact that this nominative is an object, does not influence agreement.
 
 \exg. Um veturinn voru konunginum gefnar ambáttir\\
-In the.winter were.\ac{pl} the.king.\ac{dat} given slaves.\ac{nom}\\
+In {the winter} were.\ac{pl} {the king}.\ac{sg}.\ac{dat} given slave.\ac{pl}.\ac{nom}\\
 `In the winter, the king was given (female) slaves.' \flushfill{\pgcitealt{zaenen1985}{112}}\label{ex:icelandic-nom-obj}
 
 The second type of evidence that \citeauthor{bobaljik2006} gives comes from ergative-absolutive languages. Ergative-absolutive languages differ in their alignment from nominative-accusative languages. In nominative-accusative languages, the subject of an intransitive verb (S) has the same marking as the subject of a transitive verb (A), namely nominative. The object of a transitive verb (O) has its own marking, namely accusative. This is schematically shown in \ref{fig:nom-acc-lang}.
@@ -288,7 +288,7 @@ Note here that nominative-accusative languages use the same case marking for the
 
 \citeauthor{bobaljik2006} (following \citealt{marantz2000}) combines nominative-accusative and ergative-absolutive languages in the following way: accusative and ergative are dependent cases, and nominative or absolutive are unmarked case. Reformulating Figure \ref{fig:agr-sub-do-io-lang} in terms of case instead of grammatical function gives the schema in Figure \ref{fig:agr-def-dep-dat}.
 
-\begin{figure}[H]
+\begin{figure}[ht]
   \centering
   \begin{tikzpicture}
     \draw (0,1) circle (2.25);
@@ -327,8 +327,8 @@ In the languages I discuss in this dissertation, I focus on languages that have 
     \node[] at (0,1.75) {\ac{acc}};
     \node[] at (0,0) {\ac{dat}};
   \end{tikzpicture}
-  \label{fig:agr-nom-acc-dat}
   \caption{Agreement hierarchy (\tsc{nom}/\tsc{acc/\tsc{dat}})}
+  \label{fig:agr-nom-acc-dat}
 \end{figure}
 
 In sum, this section has shown that agreement follows the same implicational hierarchy as the case scale in headless relatives: \ac{nom} < \ac{acc} < \ac{dat}.
@@ -566,7 +566,7 @@ In sum, this section has shown that relativization follows the same implicationa
 
 In the two previous sections I showed that the case scale \ac{nom} < \ac{acc} < \ac{dat} can be observed in three syntactic phenomena. First, it appears in case competition in headless relatives. Second, the case scale forms the basis for the implicational hierarchy observed in agreement across languages. Third, the same implicational holds for relativization strategies cross-linguistically.
 
-In this section, I show that this same case scale can be observed in morphology. First, syncretism only targets continuous regions on the case scale. Second, several languages show formal containment that mirrors the case scale.
+In this section, I show that this same case scale can be observed in morphology. First, syncretism only targets continuous regions on the case scale. Second, several languages show morphological containment that mirrors the case scale.
 
 
 \subsection{Syncretism}
@@ -587,7 +587,7 @@ Crucially, to the best of my knowledge, there is no language in which the nomina
 
 \begin{table}[ht]
   \center
-  \caption {Syncretisms}
+  \caption {Syncretism patterns}
     \input{tables/syncretism-nom-acc-dat.tex}
   \label{tbl:syncretisms}
 \end{table}
@@ -595,11 +595,11 @@ Crucially, to the best of my knowledge, there is no language in which the nomina
 In sum, case syncretism follows the ordering of the case scale in headless relatives: \ac{nom} < \ac{acc} < \ac{dat}.
 
 
-\subsection{Formal containment}
+\subsection{Morphological case containment}
 
-This section shows a second way in which \ac{nom} < \ac{acc} < \ac{dat} is reflected in morphology: formal containment \citep[cf.][]{smith2019,zompi2017,caha2010}. In some languages, the form that is used for the accusative literally contains the form that is used for the nominative. In turn, the forms for the dative contains the form for the accusative. I illustrate this phenomenon with examples from Khanty.
+This section shows a second way in which \ac{nom} < \ac{acc} < \ac{dat} is reflected in morphology: morphological case containment \citep[cf.][]{smith2019,zompi2017,caha2010}. In some languages, the form that is used for the accusative literally contains the form that is used for the nominative. In turn, the forms for the dative contains the form for the accusative. I illustrate this phenomenon with examples from Khanty.
 
-Khanty (or Ostyak) shows formal containment in some of its pronouns (\pgcitealt{nikolaeva1999}{16} after \citealt{smith2019}). Three examples are given in Table \ref{tbl:cont-khanty}.
+Khanty (or Ostyak) shows morphological case containment in some of its pronouns (\pgcitealt{nikolaeva1999}{16} after \citealt{smith2019}). Three examples are given in Table \ref{tbl:cont-khanty}.
 
 The nominative form for the first person singular is \tit{ma} `I'. The form for the accusative is \tit{ma:ne:m} `me'. This is the form for the nominative \tit{ma} plus the accusative marker \tit{-ne:m}. The form for the dative is \tit{ma:ne:mna} `me'. This is the form for the accusative \tit{ma:ne:m} plus the dative marker \tit{-na}. So, dative formally contains the accusative, and the accusative formally contains the nominative.
 
@@ -607,7 +607,7 @@ The third person singular and first person plural show the same pattern. The acc
 
 \begin{table}[ht]
   \center
-  \caption {Case containment in Khanty}
+  \caption {Morphological case containment in Khanty}
   \begin{tabular}{clll}
   \toprule
             & \ac{1}\ac{sg}
