--- a/tables/gothic-summary.tex
+++ b/tables/gothic-summary.tex
@@ -2,7 +2,7 @@
 
 \begin{tabular}{c|c|c|c}
   \toprule
-      \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
+      \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
         & [\ac{nom}]
         & [\ac{acc}]
         & [\ac{dat}]
