--- a/thesis.tex
+++ b/thesis.tex
@@ -24,7 +24,10 @@
 \clearpage
 \listoftables
 
-\chapter*{List of abbreviations}
+\clearpage
+\listoffigures
+
+\chapter*[List of abbreviations]{List of abbreviations}
 \begingroup
   \setlength{\LTleft}{-\tabcolsep}
 \printacronyms[include=abbr, heading=none]
