--- a/discussion.tex
+++ b/discussion.tex
@@ -20,3 +20,6 @@ two features: topic and relativization
 topic = the movement
 relativization = the morpheme
 some languages have both, so it has be at least two features
+
+
+\section{The lack of internal dative and external accusative}
