--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -138,6 +138,18 @@
   tag = abbr
 }
 
+\DeclareAcronym{mod}{
+  short = \tsc{mod} ,
+  long  = modal marker ,
+  tag = abbr
+}
+
+\DeclareAcronym{aor}{
+  short = \tsc{aor} ,
+  long  = aorist ,
+  tag = abbr
+}
+
 \DeclareAcronym{inf}{
   short = \tsc{inf} ,
   long  = infinitive ,
@@ -288,5 +300,17 @@
 \DeclareAcronym{nib}{
   short = Nib. ,
   long  = Das Nibelungenlied ,
+  tag = texts
+}
+
+\DeclareAcronym{pl.men}{
+  short = Pl. Men. ,
+  long  = {Plato, Menexenus} ,
+  tag = texts
+}
+
+\DeclareAcronym{men.dd}{
+  short = Men. DD. ,
+  long  = {Menander, The Double Deceiver} ,
   tag = texts
 }
